<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signupViewModel"
            type="com.covid.covtrack.viewModels.RegistrationViewModel" />
    </data>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorApp"
        android:fillViewport="true"
        tools:context=".views.activities.OTPActivity">

        <LinearLayout
            android:id="@+id/linear_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/str_signup"
                android:textColor="@color/colorWhite"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:theme="@style/CustomTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_username"
                    style="@style/CustomTextInputEditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:hint="@string/str_username"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:text="@={signupViewModel.userName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_usermoile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:theme="@style/CustomTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_usermobile"
                    style="@style/CustomTextInputEditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:digits="0123456789"
                    android:hint="@string/mobile"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:text="@={signupViewModel.userMobile}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_userdob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:theme="@style/CustomTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_userdob"
                    style="@style/CustomTextInputEditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:focusable="false"
                    android:hint="@string/str_dob"
                    android:imeOptions="actionNext"
                    android:inputType="none"
                    android:maxLines="1"
                    android:text="@={signupViewModel.userDob}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_userage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:theme="@style/CustomTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_userage"
                    style="@style/CustomTextInputEditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:focusable="false"
                    android:hint="@string/str_age"
                    android:imeOptions="actionNext"
                    android:inputType="none"
                    android:maxLines="1"
                    android:text="@={signupViewModel.userAge}" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/spn_qualification_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spn_qualification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_spinner_underline"
                    android:entries="@array/qualification_array"
                    android:popupBackground="@color/colorPrimary"
                    android:theme="@style/CustomSpinnerheme" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorWhite" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_userpincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:theme="@style/CustomTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_userpincode"
                    style="@style/CustomTextInputEditor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:digits="0123456789"
                    android:hint="@string/str_pincode"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:text="@={signupViewModel.userPinCode}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_useraddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:theme="@style/CustomTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_useraddress"
                    style="@style/CustomTextInputEditor"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:cursorVisible="true"
                    android:gravity="left|top"
                    android:hint="@string/str_address"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:text="@={signupViewModel.useraddress}" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/rg_volunteer_title"
                style="@style/CustomTextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_volunteer" />

            <RadioGroup
                android:id="@+id/rg_volunteer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_volunteer_yes"
                    style="@style/CustomRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_yes"
                    android:theme="@style/CustomRadioButtonTheme" />

                <RadioButton
                    android:id="@+id/rb_volunteer_no"
                    style="@style/CustomRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/str_no"
                    android:theme="@style/CustomRadioButtonTheme" />

            </RadioGroup>

            <TextView
                style="@style/CustomTextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/str_choose_language" />

            <RadioGroup
                android:id="@+id/rg_language"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_lang_english"
                    style="@style/CustomRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/str_english"
                    android:theme="@style/CustomRadioButtonTheme" />

                <RadioButton
                    android:id="@+id/rb_lang_punjabi"
                    style="@style/CustomRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_punjabi"
                    android:theme="@style/CustomRadioButtonTheme" />

            </RadioGroup>

            <TextView
                style="@style/CustomTextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/str_worker" />

            <RadioGroup
                android:id="@+id/rg_worker"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_worker_yes"
                    style="@style/CustomRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_yes"
                    android:theme="@style/CustomRadioButtonTheme" />

                <RadioButton
                    android:id="@+id/rb_worker_no"
                    style="@style/CustomRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/str_no"
                    android:theme="@style/CustomRadioButtonTheme" />

            </RadioGroup>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_submit"
                    style="@style/CustomButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/str_submit" />

                <Button
                    android:id="@+id/btn_clear"
                    style="@style/CustomButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_clear" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>